# ndp-example

./: .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  run.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/config/: gunicorn.py  settings.py  urls.py
backend/core/: authentication.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/scripts/: entrypoint.sh
frontend/: Dockerfile
frontend/pages/: index.js
frontend/pages/api/: hello.js
